--- a/Makefile.in
+++ b/Makefile.in
@@ -191,7 +191,8 @@ SUBDIRS = \
           libopc \
           opctestlinux \
           libtestopcserver \
-          ua/libuamappings
+          ua/libuamappings \
+          ua/uaclient
 
 EXTRA_DIST = configure.main
 all: all-recursive
