--- a/libtestopcserver/linux_com/Makefile.in
+++ b/libtestopcserver/linux_com/Makefile.in
@@ -17,13 +17,11 @@
 
 # Author: Alexander Rykovanov 2009
 #
-# Distributed under the GNU GPL License
-# (See accompanying file LICENSE or copy at 
-# http://www.gnu.org/copyleft/gpl.html)
 #
-# $Id:  $
-# $Date: $
-# $Revision: $
+# Distributed under the GNU LGPL License
+# (See accompanying file LICENSE or copy at 
+# http://www.gnu.org/licenses/lgpl.html)
+#
 
 VPATH = @srcdir@
 pkgdatadir = $(datadir)/@PACKAGE@
