--- a/ua/uaclient/Makefile.am
+++ b/ua/uaclient/Makefile.am
@@ -14,25 +14,26 @@ uaclientincludedir = $(opcuaincludedir)/client
 
 
 uaclientinclude_HEADERS = \
- include/opc/ua/client/socket_channel.h
+ include/opc/ua/client/computer.h
 
 lib_LIBRARIES = libuaclient.a
 
 
 libuaclient_a_SOURCES = \
-  src/socket_channel.cpp \
-  src/binary_connection.cpp
+  src/binary_connection.cpp \
+  src/computer.cpp \
+  src/socket_channel.cpp
 
-libuaclient_a_CPPFLAGS = -I$(top_srcdir)/include $(UA_MAPPING_INCLUDES)
+libuaclient_a_CPPFLAGS = -I$(top_srcdir)/include $(UA_MAPPING_INCLUDES) $(URI_INCLUDES)
 
 if BUILD_UA_CMD
 
 bin_PROGRAMS = uacmd
 
 uacmd_SOURCES = src/main.cpp
-uacmd_CPPFLAGS = -I$(top_srcdir) -I$(top_srcdir)/include $(GTEST_INCLUDES) $(GMOCK_INCLUDES) $(UA_MAPPING_INCLUDES)
+uacmd_CPPFLAGS = -I$(top_srcdir) -I$(top_srcdir)/include $(GTEST_INCLUDES) $(GMOCK_INCLUDES) $(URI_INCLUDES) $(UA_MAPPING_INCLUDES)
 uacmd_LDADD = libuaclient.a
-uacmd_LDFLAGS = $(UA_MAPPING_LIBS) -lpthread -Wl,-z,defs 
+uacmd_LDFLAGS = $(UA_MAPPING_LIBS) $(URI_LIBS) -lpthread -Wl,-z,defs 
 
 endif
 
@@ -40,11 +41,12 @@ TESTS = libuaclient_test
 
 check_PROGRAMS = $(TESTS)
 
+# tests/binary_handshake.cpp
+# tests/thread_test.cpp
 libuaclient_test_SOURCES =  \
- tests/binary_handshake.cpp \
- tests/thread_test.cpp
+ tests/computer_connect.cpp
 
-libuaclient_test_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/include $(UA_MAPPING_INCLUDES) $(GTEST_INCLUDES) $(GMOCK_INCLUDES)
+libuaclient_test_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/include $(UA_MAPPING_INCLUDES) $(GTEST_INCLUDES) $(GMOCK_INCLUDES) $(URI_INCLUDES)
 libuaclient_test_LDADD = libuaclient.a
-libuaclient_test_LDFLAGS = -lpthread -Wl,-z,defs $(UA_MAPPING_LIBS)  $(GTEST_LIB) $(GTEST_MAIN_LIB) $(GMOCK_LIBS) 
+libuaclient_test_LDFLAGS = -lpthread -Wl,-z,defs $(UA_MAPPING_LIBS)  $(GTEST_LIB) $(GTEST_MAIN_LIB) $(GMOCK_LIBS) $(URI_LIBS)
 
