Browseing compiles but tests fail

--- a/ua/uaclient/Makefile.am
+++ b/ua/uaclient/Makefile.am
@@ -53,7 +53,8 @@ check_PROGRAMS = $(TESTS)
 libuaclient_test_SOURCES =  \
  tests/computer_connect.cpp \
  tests/computer_endpoints.cpp \
- tests/computer_session.cpp
+ tests/computer_session.cpp \
+ tests/computer_view.cpp
 
 libuaclient_test_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/include $(UA_MAPPING_INCLUDES) $(GTEST_INCLUDES) $(GMOCK_INCLUDES) $(URI_INCLUDES)
 libuaclient_test_LDADD = libuaclient.a
